# atlassian-graphql

./: .gitignore  AGENTS.md  Makefile  README.md
.github/: COPILOT_INSTRUCTIONS.md
go/: go.mod
go/atlassian/: auth.go  canonical_models.go  errors.go  graphql_models.go  logging.go  oauth_3lo.go  retry.go  retry_any.go
openapi/: atlassian.transport.openapi.yaml  jira-developer-health.canonical.openapi.yaml
python/: pyproject.toml  requirements.txt
python/atlassian_graphql/: __init__.py  auth.py  canonical_models.py  client.py  errors.py  jira_projects.py  jira_rest_changelog.py  jira_rest_client.py  jira_rest_env.py  jira_rest_issues.py  jira_rest_openapi_fetcher.py  jira_rest_projects.py  jira_rest_worklogs.py  oauth_3lo.py  schema_fetcher.py
python/atlassian_graphql/mappers/: __init__.py  jira_projects_mapper.py  jira_rest_changelog_mapper.py  jira_rest_issues_mapper.py  jira_rest_projects_mapper.py  jira_rest_worklogs_mapper.py
python/tests/integration/: test_live_jira_issues_rest.py  test_live_jira_projects.py  test_live_jira_projects_rest.py  test_live_smoke.py
python/tests/unit/: test_auth.py  test_beta_headers.py  test_client_basic.py  test_jira_projects_mapper.py  test_jira_projects_pagination.py  test_jira_rest_changelog.py  test_jira_rest_issues.py  test_jira_rest_openapi_fetcher.py  test_jira_rest_projects.py  test_jira_rest_worklogs.py  test_oauth_3lo.py  test_rate_limit_429.py  test_schema_fetcher.py
python/tools/: fetch_graphql_schema.py  fetch_jira_rest_openapi.py  generate_jira_project_models.py  generate_jira_rest_models.py  oauth_login.py
(+54 files in other folders)
