[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlassian-graphql-client"
version = "0.1.0"
description = " Atlassian GraphQL client for Python"
authors = [{ name = "Chris George" }]
requires-python = ">=3.9"
dependencies = ["httpx>=0.27", "pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
